# inpainting-review

./: .gitignore  .pre-commit-config.yaml  README.md  inpainting-tasks.json  models.py  pyproject.toml  requirements.txt  task-config.json  task_definitions.py
app/comfyui/: server.py  utils.py  workflow.py
app/comfyui/workflows/: flux-1-fill-dev.json
app/openai/: dall_e_2.py
comfyui_workflows/: flux-1-dev_img-gen.json  flux-1-dev_img-gen_api.json  flux-1-fill-dev-gguf_inpaint.json  flux-1-fill-dev-gguf_inpaint_api.json  flux-1-fill-dev_inpaint.json  flux-1-fill-dev_inpaint_api.json  flux-1-turbo_Inpainting_controlnet_turbo.json  flux-1-turbo_Inpainting_controlnet_turbo_api.json  sd-1-5_img-gen.json  sd-1-5_img-gen_api.json  sd-2_inpainting.json  sd-2_inpainting_api.json
data/: inpainting-tasks.json
notebooks/: comfyui_execution.ipynb  comfyui_installation.ipynb  visualize_benchmark_and_results.ipynb
scripts/: benchmark_visualization.ipynb  comfyui_server.py  run_workflow.py  visualize_benchmark.py
src/app/comfyui/: cli.py  comfy2py.py  server.py  workflow.py
src/app/openai/: dall_e_2.py
src/app/utils/: visualization.py
src/inpainting_review/: models.py  tasks.json
src/inpainting_review/comfyui/: README.md  comfy2py.py  server.py  utils.py  workflow.py
src/inpainting_review/openai/: dall_e_2.py
src/inpainting_review/utils/: image.py  visualization.py
workflows/: __init__.py  dall_e_2.py  flux1_fill_dev.py  flux_1_fill_dev.py  model_loader.py  utils.py
workflows/comfyui/: demo.json  demo_prompt.json
workflows/diffusers/: flux1_fill_dev.py
(+1 files in other folders)
