[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inpainting-review"
version = "0.0.1"
description = "A project to review inpainting workflows."
dependencies = [
    "accelerate==1.1.1",
    "aiohttp==3.11.2",
    "click==8.1.7",
    "einops==0.8.0",
    "gguf==0.10.0",
    "kornia>=0.7.1",
    "matplotlib==3.9.2",
    "openai==0.27.1",
    "pillow==11.0.0",
    "psutil==5.9.5",
    "pydantic==2.10.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "safetensors>=0.4.2",
    "scipy==1.13.1",
    "sentencepiece==0.2.0",
    "soundfile==0.12.1",
    "spandrel==0.4.0",
    "tokenizers>=0.13.3",
    "torchsde==0.2.6",
    "transformers>=4.28.1",
    "tqdm==4.66.6"
]

[project.scripts]
comfy2py = "app.comfyui.comfy2py:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/*.json"]
